# cloxc

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  lib.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
test/: CMakeLists.txt
test/source/: cloxc_test.c
